FeatureResponse의 Asset은 AssetResponse 그외 Station의 Feature의 Asset은 FeatureResponseWithoutAsset로 Long id를 갖음.